config/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: green-agent
  labels:
    name: green-agent
